# pipedream-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SEMANTICS.md  design-doc.md
docs/plans/: 2026-02-02-refactor-design-critique-plan.md  2026-02-02-semantic-contract.md
src/: envelope.rs  error.rs  events.rs  lib.rs  stream.rs  subscription.rs  tests.rs  tests.rs.bak  tracker.rs
tests/: blocking_check.rs  blocking_forward.rs  dropped_visibility.rs  repro_issue.rs  weak_stream_cycle.rs
