[package]
name = "pipedream-rs"
version = "0.1.0"
edition = "2021"
description = "A typed stream primitive for heterogeneous data routing and pipeline composition"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
parking_lot = "0.12"
dashmap = "6.1"
async-stream = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
