[package]
name = "pipedream-rs"
version = "0.2.0"
edition = "2021"
description = "A typed, heterogeneous event relay with observable delivery, completion tracking, and lossless message routing"
license = "MIT"
repository = "https://github.com/crcn/pipedream-rs"
keywords = ["async", "stream", "relay", "event", "messaging"]
categories = ["asynchronous", "data-structures"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
parking_lot = "0.12"
dashmap = "6.1"
async-stream = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
